  * gtk/rgfilterwindow.cc:
    - fix i18n problem in the filter settings 
      (thanks to Alexander Bart)
  * help/sv:
    - added swedish manual (thanks to Daniel Nylander)
      closes: #384388
  * added support for GUI configuraton of http proxy
  * translation updates:
    - cs.po: thanks to Vít Pelcak
  * make description buffer dynamic (thanks to Benjamin Jacobs)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  4 Jan 2007 10:15:41 +0100

synaptic (0.57.11) unstable; urgency=low

  * po/ja.po: updated japanese translation (thanks to Daisuke SUZUKI)
  * po/sv.po: updated translation (thanks to Daniel Nylander)
  * UI and string fixes (thanks to Sebastian Heinlein)
  * show broken packages in the status view as well
  * don't show a download window if nothing is going to be downloaded
  * return non-zero exit code on error
  * po-manual/synaptic-manual.pot:
    - updated (thanks to Sebastian Heinlein)
  
 -- Michael Vogt <mvo@debian.org>  Thu, 27 Jul 2006 15:12:31 +0200

synaptic (0.57.10) unstable; urgency=low

  * fix a bug in the skip-taskbar handling (thanks to seb128)
  * fix the column sorting (closes: #361070)
  * use the urgency hint for the conffile prompt (ubuntu: #21898)
  * better handling of the automatic terminal expanding (ubuntu: #38935)
  * g++-4.1 fixes (thanks to Martin Michlmayr) (closes: #357863)
  * added some documentation for the 'Add downloaded packages' option
    (closes: #365446)

 -- Michael Vogt <mvo@debian.org>  Tue, 9 May 2006 09:50:02 +0200

synaptic (0.57.9) unstable; urgency=low

  * fix more set_transient() problems with run with --parent-window-id
  * fix problem with fetch window not centered on parent (thanks to
    seb128 and glatzor)
  * if no terminal activity is detected and the terminal is expanded
    set the urgency hint as well (ubuntu: #31436)
  * remove http:// when it was entered as part of the proxy uri
  * include reinstall markings in the "changes" filter
  * fix memory corruption problem
