@@ -21,6 +21,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
+  <property name="urgency_hint">False</property>
   <property name="has_separator">False</property>
 
   <child internal-child="vbox">
@@ -1146,6 +1147,15 @@
 				      <property name="label" translatable="yes">Origin</property>
 				      <property name="use_underline">True</property>
 				      <signal name="activate" handler="on_origin1_activate" last_modification_time="Sun, 18 Apr 2004 16:40:34 GMT"/>
+				    </widget>
+				  </child>
+
+				  <child>
+				    <widget class="GtkMenuItem" id="menuitem_type12">
+				      <property name="visible">True</property>
+				      <property name="label" translatable="yes">Component</property>
+				      <property name="use_underline">True</property>
+				      <signal name="activate" handler="on_component_activate" last_modification_time="Thu, 11 Jan 2007 14:44:55 GMT"/>
 				    </widget>
 				  </child>
 				</widget>
