@@ -19,8 +19,9 @@ synaptic (0.57.12) UNRELEASED; urgency=low
   * translation updates:
     - cs.po: thanks to Vít Pelcak
   * make description buffer dynamic (thanks to Benjamin Jacobs)
+  * added component filter
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  4 Jan 2007 10:15:41 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Jan 2007 15:45:25 +0100
 
 synaptic (0.57.11) unstable; urgency=low
 
